<resources>
    <string name="app_name">RoomKotlin</string>
    <string name="add_users">Insert Users</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="ttl">Tempat Tanggal Lahir</string>
    <string name="email">Alamat Email</string>
    <string name="phone">Nomor Telepon</string>
    <string name="alamat">Alamat Sekarang</string>
    <string name="insert">INSERT</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>