<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DeleteUsersActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFullNameDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:id="@+id/textViewAlamatDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/textViewPhoneDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/textViewEmailDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/textViewDobDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ttl"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/textViewGenderDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/buttonDeleteData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>