<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewUsersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditTextFullNameAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="text"
            android:autofillHints="name"/>
        <EditText
            android:id="@+id/EditTextAlamatAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:autofillHints="name"/>
        <EditText
            android:id="@+id/EditTextPhoneAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="phone"
            android:autofillHints="phone"/>
        <EditText
            android:id="@+id/EditTextEmailAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
        <EditText
            android:id="@+id/EditTextDobAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ttl"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/EditTextGenderAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:autofillHints="name"/>
        <Button
            android:id="@+id/buttonInsertData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/insert" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>